<resources>
    <string name="app_name">Spouse</string>
    <string name="login">Автентифікація</string>
    <string name="email">Електронна пошта</string>
    <string name="password">Пароль</string>
    <string name="register">Зареєструватися</string>
    <string name="spouse">Spouse</string>
    <string name="confirm_your_password">Підтвердіть Ваш пароль</string>
    <string name="registration">Реєстрація</string>
    <string name="main_menu">Меню</string>
    <string name="make_order">Замовити</string>
    <string name="edit_order">Редагувати</string>
    <string name="sign_out">Вийти</string>
    <string name="kyiv">Київ</string>
    <string name="lviv">Львів</string>
    <string name="kharkiv">Харків</string>
    <string name="odesa">Одеса</string>
    <string name="dnipro">Дніпро</string>
    <string name="choose_your_city">Оберіть Ваше місто</string>
    <string name="city_city">Місто: city</string>
    <string name="choose_your_celebration_place">Оберіть місце святкування</string>
    <string name="restaurant">Ресторан</string>
    <string name="countryside_complex">Заміський комлекс</string>
    <string name="park">Парк</string>
    <string name="conference_hall">Конференц-зал</string>
    <string name="select_place_in_city">Оберіть place у вибраному місті: city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Інше</string>
    <string name="you_can_complete_your_order">Ви можете оформити Ваше замовлення</string>
    <string name="location_location">Локація: location</string>
    <string name="accessories">Аксесуари</string>
    <string name="flowers">Квіти</string>
    <string name="photographers">Фотограф</string>
    <string name="djs">Діджей</string>
    <string name="hosts">Ведучий</string>
    <string name="confirm">Підтвердити</string>
    <string name="comments">Залиште додаткові побажання тут:</string>
    <string name="click_on_images_to_set_details">Натисніть на картинку для подальших деталей</string>
    <string name="red">Червоний</string>
    <string name="orange">Помаранчевий</string>
    <string name="yellow">Жовтий</string>
    <string name="green">Зелений</string>
    <string name="blue">Блакитний</string>
    <string name="violet">Фіолетовий</string>
    <string name="golden">Золотий</string>
    <string name="silver">Срібний</string>
    <string name="amount_0_price_0_uah">Кількість: %1$d, Вартість: %2$d UAH</string>
    <string name="bouquet_0_price_0_uah">Квітів у букеті: %1$d, Вартість: %2$d UAH</string>
    <string name="hours_0_price_0_uah">Години: %1$d, Вартість: %2$d UAH</string>
    <string name="go_back">Назад</string>
    <string name="reset">Скинути</string>
    <string name="total_sum">Сумарна вартість: %1$d UAH</string>
    <string name="total_accessories_sum">Аксесуари сумарно: %1$d UAH</string>
    <string name="roses">Троянди</string>
    <string name="peonies">Піонії</string>
    <string name="freesias">Фризії</string>
    <string name="pink">Рожевий</string>
    <string name="white">Білий</string>
    <string name="choose_your_dj">Оберіть діджея</string>
    <string name="maverick">Maverick</string>
    <string name="dj_anna">DJ Anna</string>
    <string name="sasha_topchik">Sasha Topchik</string>
    <string name="dj1_description">Енергійний діджей з 10-річним стажем, спеціалізується на електронно-танцювальній музиці. Вартість послуг - 5500 грн</string>
    <string name="dj2_description">Діджейка та майстерна співачка, міксує та співає пісні на будь-який смак. Вартість послуг - 4500 грн</string>
    <string name="dj3_description">Діджей-гуморист, реміксує популярні українські пісні й легко підлаштовується під людей різного віку. Вартість послуг - 4000 грн</string>
    <string name="none">Жоден</string>
    <string name="valeriia">Валерія Широкіна</string>
    <string name="dmytro">Дмитро Остапенко</string>
    <string name="vlad">Влад Доля</string>
    <string name="photo1_description">Весела фотографка, що зробить з Вашого свята незабутній і захопливий вишуканий спогад. Вартість послуг - 500 грн/година</string>
    <string name="photo2_description">Досвідчений фотограф з досвідом 8 років, що готовий іти на ризики заради неймовірних світлин. Вартість послуг - 850 грн/година</string>
    <string name="photo3_description">Фотограф, який готовий до експериментів та їхнього втілення в життя у вигляді неймовірних фото. Вартість послуг- 750 грн/година</string>
    <string name="choose_your_host">Оберіть ведучого</string>
    <string name="total_estimated_price_1_d">Орієнтована вартість: %1$d грн</string>
    <string name="total_estimated_price_1_d_new">Нова орієнтована вартість: %1$d грн</string>
    <string name="complete_order">Замовити</string>
    <string name="oleksii">Олексій Атаманенко</string>
    <string name="host1_description">Ведучий і аніматор за сумісництвом, зробить Ваше свято веселим та незабутнім. Вартість послуг - 8000 грн</string>
    <string name="iryna">Ірина Мовчун</string>
    <string name="host2_description">Талановита ведуча, яка нікого не залишить байдужим і стане яскравим спогадом Вашого свята. Вартість послуг - 8500 грн</string>
    <string name="illia">Ілля Король</string>
    <string name="host3_description">Екстравагантний ведучий з відмінною емпатією, який вловлює будь-що й здатен заохотити будь-кого. Вартість послуг - 10 000 грн</string>
    <string name="your_estimated_order">Ваше орієнтовне замовлення</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="address_address">Адреса: address</string>
    <string name="total_flowers_sum">Квіти сумарно: %1$d UAH</string>
    <string name="select_partner_restaurant">Оберіть партнерський ресторан у Вашому місті</string>
    <string name="order">Замовити</string>
    <string name="balloons">Звичайні кульки</string>
    <string name="heart">Серця</string>
    <string name="arch">Арки</string>
    <string name="warning">Ви вже обрали місце у Вашому регіоні, де подають весільні страви і де немає потреби підключати ресторана-партнера</string>
    <string name="phone_textView">Ви можете ввести Ваш номер телефону для подальшого зв\'язку</string>
    <string name="number_format">Приклад: 0987654321</string>
    <string name="skip">Пропустти</string>
    <string name="partners">Партнери</string>
    <string name="chooseCategories">Оберіть категорії для редагування</string>
    <string name="location_capital">Location</string>
    <string name="dj">Діджей</string>
    <string name="host">Ведучий</string>
    <string name="photographer">Фотограф</string>
    <string name="edit">Редагувати</string>
    <string name="attention">attention</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
</resources>