<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_200"
    tools:context=".fragment.ExactFlowersOptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <liubomyr.stepanenko.spouse.model.RoundedImageView
            android:id="@+id/exactFlowersImageView"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/redFlowerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/red"
            android:textColor="@color/red_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exactFlowersImageView" />

        <CheckBox
            android:id="@+id/yellowFlowerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/yellow"
            android:textColor="@color/red_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/pinkFlowerCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/exactFlowersImageView" />

        <CheckBox
            android:id="@+id/pinkFlowerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/pink"
            android:textColor="@color/red_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redFlowerCheckBox" />

        <CheckBox
            android:id="@+id/whiteFlowerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/white"
            android:textColor="@color/red_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/pinkFlowerCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/yellowFlowerCheckBox" />

        <TextView
            android:id="@+id/flowersAmountAndPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/amount_0_price_0_uah"
            android:textColor="@color/red_500"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinkFlowerCheckBox" />

        <SeekBar
            android:id="@+id/flowersAmountPriceSeekBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:theme="@style/CustomSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flowersAmountAndPrice" />

        <Button
            android:id="@+id/resetFlowersButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flowersAmountPriceSeekBar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>